--- a/src/public/css/config.css
+++ b/src/public/css/config.css
@@ -1,4 +1,4 @@
-#configClass {
+/* #configClass {
     top: -1000px;
     position: relative;
     transition: 600ms;
@@ -12,7 +12,7 @@
 
 #cashierTypeDelivery ul li {
     display: inline;
-}
+} */
 
 
 /* .card-body,
