--- a/src/views/login/login.hbs
+++ b/src/views/login/login.hbs
@@ -12,7 +12,7 @@
                     <form>
                         <div class="form-group">
                             <label>Email address</label>
-                            <input type="email" class="form-control"  name="email" placeholder="Email" value="admin@gmail.com">
+                            <input type="email" class="form-control"  name="email" placeholder="Email">
                         </div>
                         <div class="form-group">
                             <label>Password</label>
