--- a/src/views/partials/_modalClient.hbs
+++ b/src/views/partials/_modalClient.hbs
@@ -32,14 +32,19 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="form-group col-5">
+                        <div class="form-group col-8">
                             <label for="" class="">Bairro</label>
                             <input type="text" id="neighborhood" class="form-control">
                         </div>
-                        <div class="form-group col-7">
+                          <div class="form-group col-4">
+                            <label for="" class="">Taxa De Entrega</label>
+                            <input type="text" id="taxaEntrega" class="form-control dinheiro" maxlength="6">
+                        </div>
+                        <div class="form-group col-12">
                             <label for="" class="">Endereço</label>
                             <input type="text" id="addressClient" class="form-control ">
                         </div>
+                      
                     </div>
             </div>
             <div class="modal-footer">
@@ -50,3 +55,12 @@
         </div>
     </div>
 </div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="https://igorescobar.github.io/jQuery-Mask-Plugin/js/jquery.mask.min.js"></script>  
+<script>
+
+    jQuery('.dinheiro').mask('#.##0,00', {reverse: true,});
+   
+</script>
