--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="/css/config.css">
     <link rel="stylesheet" href="/css/CLIENTES.css">
     <link rel="stylesheet" href="/css/graficos.css">
+    <link rel="stylesheet" href="/css/cashier.css">
 </head>
 
 <body>
