--- a/src/views/config/entrega.hbs
+++ b/src/views/config/entrega.hbs
@@ -21,7 +21,7 @@
                     </div>
                 </div>
         </div>
-        <div class="form-group col-5 mt-2">
+        <div class="form-group col-5 mt-2 mobile">
             <button class="btn btn-dark col-12">Enviar Configurações</button>
         </div>
         </form>
@@ -33,7 +33,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://igorescobar.github.io/jQuery-Mask-Plugin/js/jquery.mask.min.js"></script>
 <script>
-
+  
     jQuery('.dinheiro').mask('#.##0,00', { reverse: true, });
 
 </script>
