--- a/src/views/cashier/cashier.hbs
+++ b/src/views/cashier/cashier.hbs
@@ -112,7 +112,7 @@
                                         <button class="btn btn-outline-dark mt-4"
                                             id="pesquisarClasses">PESQUISAR</button>
                                     </div>
-                                    <div id="itensDoCardapio" class="row">
+                                    <div id="itensDoCardapio" class="row ml-3">
                                     </div>
                                     <div class="row col-12">
                                         <div class="form-group col-12">
@@ -190,4 +190,3 @@
 <!-- ============================================================== -->
 <!-- end horizontal form -->
 <!-- ============================================================== -->
- 
