--- a/src/views/config/entrega.hbs
+++ b/src/views/config/entrega.hbs
@@ -1,12 +1,3 @@
-<style>
-
-    @media only screen and (max-width: 600px) {
-  .mobile {
-    display: inline-block ;
-  }
-}
-</style>
-
 <div class="container">
     <div class="card">
         <div class="card-body">
@@ -15,22 +6,22 @@
             <hr>
         </div>
         <div class="card-body" >
-            <form action="/config/delivery" method="post">
+            <form action="/config/delivery"  method="post">
                 <div class="row">
-                    <div class="form-group col-6">
+                    <div class="form-group col-md-6 col-md-1">
                         <label for="">Cadastre os Bairros disponíveis para entrega</label>
-                        <input type="text" name="bairro" id="bairro" class="form-control"
+                        <input type="text" required name="bairro" id="bairro" class="form-control"
                             placeholder="Digite o nome do bairro">
 
                     </div>
-                    <div class="form-group col-4">
+                    <div class="form-group col-md-6 col-md-1">
                         <label for="">Valor da Entrega</label>
-                        <input type="text" name="valor"  id="valor" class="form-control dinheiro" maxlength="6"
+                        <input type="text" required name="valor"  id="valor" class="form-control dinheiro" maxlength="6"
                             placeholder="Digite o valor da entrega">
                     </div>
                 </div>
         </div>
-        <div class="form-group col-5 mt-2 mobile">
+        <div class="form-group mt-2" id="mobile">
             <button class="btn btn-dark col-12">Enviar Configurações</button>
         </div>
         </form>
@@ -41,8 +32,8 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://igorescobar.github.io/jQuery-Mask-Plugin/js/jquery.mask.min.js"></script>
-<script>
 
+<script>
     jQuery('.dinheiro').mask('#.##0,00', { reverse: true, });
 
 </script>
