arrumando cashier client

--- a/src/views/cashier/cashier.hbs
+++ b/src/views/cashier/cashier.hbs
@@ -99,7 +99,7 @@
                         <div class="row">
                             <div class="col-sm-8">
                                 <div class="row">
-                                    <div class="form-group col-8">
+                                    <div class="form-group col-sm-12 col-md-4 col-lg-8 col-xl-8">
                                         <label for="">Selecione uma classe do Cardápios</label>
                                         <select name="" id="selectClassCardapio" class="form-control" id="fundo">
                                             <option value="">Selecione uma classe</option>
@@ -108,11 +108,11 @@
                                             {{/each}}
                                         </select>
                                     </div>
-                                    <div class="form-group col-2 mt-2">
-                                        <button class="btn btn-outline-dark mt-4"
+                                    <div class="form-group col-sm-12 col-md-4 col-lg-4 col-xl-4 mt-2">
+                                        <button class="btn btn-outline-dark col-12 mt-4"
                                             id="pesquisarClasses">PESQUISAR</button>
                                     </div>
-                                    <div id="itensDoCardapio" class="row ml-1">
+                                    <div id="itensDoCardapio" class="container">
                                     </div>
                                     <div class="row col-12">
                                         <div class="form-group col-12">
