--- a/src/views/partials/_modalClient.hbs
+++ b/src/views/partials/_modalClient.hbs
@@ -8,8 +8,8 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div class="row">  
-                        <div class="form-group col-8">
+                <div class="row">
+                        <div class="form-group col-sm-12 col-md-12 col-lg-12 col-lx-12">
                             <select name="telephone" id="telephone" class="form-control">
                                 <option value="">Selecione o Cliente</option>
                                 {{#each users}}
@@ -22,29 +22,29 @@
                 <form action="/caixa/registerUser" method="post">
                     <div class="row mt-3">
                         <input type="hidden" id="idUsuarios" name="id">
-                        <div class="form-group col-6">
+                        <div class="form-group col-sm-12 col-md-6 col-lg-6 col-xl-6">
                             <label for="" class="ml-2">Nome do Cliente</label>
                             <input type="text" id="nomeDoCliente" class="form-control ml-2">
                         </div>
-                        <div class="form-group col-6">
+                        <div class="form-group col-sm-12 col-md-6 col-lg-6 col-xl-6">
                             <label for="" class="ml-2">Numero Telefone do Cliente</label>
                             <input type="text" id="numeroTelefone" class="form-control ml-2">
                         </div>
                     </div>
                     <div class="row">
-                        <div class="form-group col-8">
+                        <div class="form-group col-sm-12 col-md-8 col-lg-8 col-xl-8">
                             <label for="" class="">Bairro</label>
                             <input type="text" id="neighborhood" class="form-control">
                         </div>
-                          <div class="form-group col-4">
+                          <div class="form-group col-sm-12 col-md-4 col-lg-4 col-xl-4">
                             <label for="" class="">Taxa De Entrega</label>
                             <input type="text" id="taxaEntrega" class="form-control dinheiro" maxlength="6">
                         </div>
-                        <div class="form-group col-12">
+                        <div class="form-group col-sm-12 col-md-12 col-lg-12 col-xl-12">
                             <label for="" class="">Endereço</label>
                             <input type="text" id="addressClient" class="form-control ">
                         </div>
-                      
+
                     </div>
             </div>
             <div class="modal-footer">
@@ -58,9 +58,9 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-     <script src="https://igorescobar.github.io/jQuery-Mask-Plugin/js/jquery.mask.min.js"></script>  
+     <script src="https://igorescobar.github.io/jQuery-Mask-Plugin/js/jquery.mask.min.js"></script>
 <script>
 
     jQuery('.dinheiro').mask('#.##0,00', {reverse: true,});
-   
+
 </script>
