--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -187,9 +187,8 @@
                         </div>
 
                         <div class="form-group col-8">
-                            <h6 class=""><strong>Nome: </strong> {{this.nome}}
-                                &nbsp;&nbsp;&nbsp;<strong>Telefone:
-                                </strong> {{trataTelephone this.telephone}}</h6>
+                            <h6 class=""><strong>Nome:</strong>{{this.nome}}
+                              &nbsp;<strong>Telefone:</strong>{{trataTelephone this.telephone}}</h6>
                         </div>
 
                         <div class="form-group ml-3">
