--- a/src/views/config/config.hbs
+++ b/src/views/config/config.hbs
@@ -61,11 +61,12 @@
             <hr>
             <div class="row">
                 <div class="form-group col-6 ml-5 mt-3">
-                    <h6 class="text-left">Configurações Classes de Cardápios <small><br>(Aperte no botão Cadastar e separar seus
+                    <h6 class="text-left">Configurações Classes de Cardápios <small><br>(Aperte no botão Cadastar e
+                            separar seus
                             produtos em classes Ex:bebidas,hamburgues,pizzas, etc)</small></h6>
-                    <div class="col-sm-5 mt-3">
+                    <div class="col-sm-5 mt-3 ">
                         <div class="btn-group" role="group" aria-label="Basic example">
-                            <button type="button" class="btn btn-outline-dark" data-toggle="modal"
+                            <button type="button" class="btn btn-outline-dark " data-toggle="modal"
                                 data-target="#addClass" style="border-radius: 5px;">Cadastar Classe Cardápio</button>
                             <button type="button" class="btn btn-outline-dark ml-1" data-toggle="modal"
                                 data-target="#editClass" style="border-radius: 5px;">Editar Classe Cardápio</button>
@@ -73,18 +74,19 @@
                     </div>
                 </div>
 
-            <div class="form-group col-4 ml-2 mt-3">
-                <h6 class="text-left">Configurações numeros máximo de compra <small><br>(Ative que clientes não
-                        venham conseguir pedir comprar mais que o limite que você tem para produzir)</small></h6>
-                <form action="/config/maxPedidos" method="post">
-                    <div class="col-sm-12 ml-3">
-                        <div class="row mt-3">
-                            <input type="number" min="1" name="maxCompra" class="form-control col-7"
-                                value="{{this.maxCompra}}">
-                            <button class="btn btn-outline-dark col-3 ml-2" style="border-radius: 5px;">Salvar</button>
-                        </div>
-                </form>
-                {{!-- <div class="page-header float-left">
+                <div class="form-group col-4 ml-2 mt-3 ">
+                    <h6 class="text-left">Configurações numeros máximo de compra <small><br>(Ative que clientes não
+                            venham conseguir pedir comprar mais que o limite que você tem para produzir)</small></h6>
+                    <form action="/config/maxPedidos" method="post">
+                        <div class="col-sm-12 ml-3">
+                            <div class="row mt-3">
+                                <input type="number" min="1" name="maxCompra" class="form-control col-7"
+                                    value="{{this.maxCompra}}">
+                                <button class="btn btn-outline-dark col-3 ml-2"
+                                    style="border-radius: 5px;">Salvar</button>
+                            </div>
+                    </form>
+                    {{!-- <div class="page-header float-left">
                             <div class="page-title">
                                 <ol class="breadcrumb text-right">
                                     <p>Desativar/Ativar &nbsp;&nbsp;</p>
@@ -101,6 +103,7 @@
                                 </ol>
                             </div>
                         </div> --}}
+           
             </div>
         </div>
 
