--- a/src/views/config/config.hbs
+++ b/src/views/config/config.hbs
@@ -103,12 +103,26 @@
                                 </ol>
                             </div>
                         </div> --}}
-           
-            </div>
-        </div>
 
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
+<div class="container">
+    <div class="card">
+        <div class="card-body">
+            <div class="row">
+                <div class="col"></div>
+                <div class="col">
+                    {{>_mercadoPago}}
+                </div>
+                <div class="col"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
