--- a/src/views/grapichs/grapichs.hbs
+++ b/src/views/grapichs/grapichs.hbs
@@ -161,14 +161,8 @@
 
 <div class="col-lg-12 col-md-6">
     <div class="card">
-        <div class="card-header" id="pgm">
-            <strong class="card-title mb-3" style="text-align: center;">Developing Solutions</strong>
-            <form action="/pay" method="post">
-            <input type="image" src="/images/mceclip0.png" width="300" alt="Submit Form" />
-
-            </form>
-        </div>
-        <div class="card-body">
+        {{>_mercadoPago}}
+        <div class="card-body mt-5">
             <p class="text-center"><i class="fa fa-code"></i>Author Matheus & Isaac DSC</p>
             <div class="card-text text-sm-center">
                 <a href="https://www.facebook.com/DevelopingSolutiosTech" target="_blanck"><i class="fa fa-facebook pr-1"></i></a>
