--- a/src/views/partials/_nav.hbs
+++ b/src/views/partials/_nav.hbs
@@ -22,7 +22,7 @@
         <div class="col-sm-5">
             <div class="user-area dropdown float-right">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img class="user-avatar rounded-circle" src="/images/avatar/profile.png" alt="User Avatar"
+                    <img class="user-avatar rounded-circle" src="/images/avatar/profile.png" onerror="this.onerror=null; this.src='/images/avatar/anonimus.png'" alt="User Avatar"
                         id="perfil">
                 </a>
 
