--- a/src/views/profile/myProfile.hbs
+++ b/src/views/profile/myProfile.hbs
@@ -7,7 +7,7 @@
                 <div class="col-sm-4 mt-5">
                     <form action="/profile/upload" method="post" enctype="multipart/form-data">
                         <a data-target="#imgProfile" href="">
-                            <img src="/images/avatar/profile.png" alt="Fotom Perfil" class="ml-5"
+                            <img src="/images/avatar/profile.png" onerror="this.onerror=null; this.src='/images/avatar/anonimus.png'" alt="Fotom Perfil" class="ml-5"
                                 style="border-radius:50%;" width="250">
                         </a>
                         <div class="form-group col-4 ml-4">
