--- a/src/views/partials/_nav.hbs
+++ b/src/views/partials/_nav.hbs
@@ -1,4 +1,5 @@
 <!-- Header-->
+{{>_popup}}
 <header id="header" class="header">
     <audio class="audios" src="/audio/campainha.mp3"></audio>
     <div class="header-menu">
