--- a/src/views/grapichs/grapichs.hbs
+++ b/src/views/grapichs/grapichs.hbs
@@ -119,7 +119,7 @@
                                         <a href="#">
                                             <img class="align-self-center  rounded-circle mr-3"
                                                 style="width:85px; height:85px;" alt=""
-                                                src="/images/avatar/profile.png">
+                                                src="/images/avatar/profile.png" onerror="this.onerror=null; this.src='/images/avatar/anonimus.png'">
                                         </a>
                                         <div class="media-body">
                                             <h2 class="text-light display-6">{{admin.name}}</h2>
