--- a/src/views/config/config.hbs
+++ b/src/views/config/config.hbs
@@ -2,13 +2,19 @@
 
 {{>_configClassMenu}}
 
-
+<style>
+    @media only screen and (max-width: 600px) {
+  #btngroup {
+   flex-wrap: wrap;
+  }
+}
+</style>
 <div class="container" id="config">
     <div class="card">
         <div class="card-body">
             <h5>Configurações Gerais</h5>
             <hr>
-            <div class="row col-12 mt-3 ml-3">
+            <div class="d-flex">
                 <div class="form-group col-6">
                     <h6 class="text-left">Configurações de Bairro <small><br>(Caso ative você deverá configurar os
                             Bairros
@@ -60,12 +66,12 @@
             </div>
             <hr>
             <div class="row">
-                <div class="form-group col-6 ml-5 mt-3">
+                <div class="form-group  ml-1 col-sm-6 col-md-6 col-lg-6 col-xl-6 mt-3">
                     <h6 class="text-left">Configurações Classes de Cardápios <small><br>(Aperte no botão Cadastar e
                             separar seus
                             produtos em classes Ex:bebidas,hamburgues,pizzas, etc)</small></h6>
-                    <div class="col-sm-5 mt-3 ">
-                        <div class="btn-group" role="group" aria-label="Basic example">
+                    <div class="col-sm-5 mt-3 d-flex flex-wrap">
+                        <div class="btn-group " id="btngroup" role="group" aria-label="Basic example">
                             <button type="button" class="btn btn-outline-dark " data-toggle="modal"
                                 data-target="#addClass" style="border-radius: 5px;">Cadastar Classe Cardápio</button>
                             <button type="button" class="btn btn-outline-dark ml-1" data-toggle="modal"
@@ -74,7 +80,7 @@
                     </div>
                 </div>
 
-                <div class="form-group col-4 ml-2 mt-3 ">
+                <div class="form-group ml-2 mt-3 col-sm-12 col-md-6 col-lg-6 col-xl-4 mt-3">
                     <h6 class="text-left">Configurações numeros máximo de compra <small><br>(Ative que clientes não
                             venham conseguir pedir comprar mais que o limite que você tem para produzir)</small></h6>
                     <form action="/config/maxPedidos" method="post">
