--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -144,8 +144,11 @@
                     <hr>
                     <div class="col-sm-8 hidden-sm-down">
 
-                        <button type="button" class="btn btn-primary float-right bg-flat-color-1 ml-3"><i
-                                title="Imprimir" class="fa fa-print" onclick="imprimir(this)"></i></button>
+                        <button type="button"  onclick="imprimir(this)" class="btn btn-primary float-right bg-flat-color-1 ml-3"><i
+                                title="Imprimir" class="fa fa-print" ></i></button>
+
+                        <button type="button" onclick="editar('{{this.orderRequest}}')" class="btn btn-secondary float-right  ml-3"><i
+                                title="Editar" class="fa fa-edit" ></i></button>
 
                         <button type="button"
                             onclick="mandaMensagem('{{this.telephone}}','Cancelado','{{this.orderRequest}}')"
@@ -342,3 +345,4 @@
 </div> <!-- .content -->
 
 <script src="/scripts/socket.js"></script>
+<script src="/js/editar.js"></script>
