--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -1,4 +1,5 @@
 {{>_popup}}
+<!--{{>_modalEditRequest}}-->
 <div class="breadcrumbs">
     <div class="col-sm-4">
         <div class="page-header float-left">
@@ -147,8 +148,8 @@
                         <button type="button"  onclick="imprimir(this)" class="btn btn-primary float-right bg-flat-color-1 ml-3"><i
                                 title="Imprimir" class="fa fa-print" ></i></button>
 
-                        <button type="button" onclick="editar('{{this.orderRequest}}')" class="btn btn-secondary float-right  ml-3"><i
-                                title="Editar" class="fa fa-edit" ></i></button>
+                       <!-- <button type="button" onclick="editar('{{this.orderRequest}}')" data-toggle="modalEditClient" data-target="#modalEditClient" class="btn btn-secondary float-right  ml-3"><i
+                                title="Editar" class="fa fa-edit" ></i></button>-->
 
                         <button type="button"
                             onclick="mandaMensagem('{{this.telephone}}','Cancelado','{{this.orderRequest}}')"
@@ -343,6 +344,11 @@
     </div>
     <!-- Right Panel -->
 </div> <!-- .content -->
-
+<script>
+    window.addEventListener("storage",(function(e){
+       location.reload(true)
+    }).bind(this));
+   
+</script>
 <script src="/scripts/socket.js"></script>
 <script src="/js/editar.js"></script>
