--- a/src/views/partials/_modalEditRequest.hbs
+++ b/src/views/partials/_modalEditRequest.hbs
@@ -1,4 +1,4 @@
-<!--<div class="modal fade" id="modalEditClient" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+<div class="modal fade" id="modalEditClient" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered  modal-lg" role="document">
         <div class="modal-content">
@@ -9,7 +9,7 @@
                 </button>
             </div>
             <div class="modal-body" id="modalEditaPedido">
-                 <button type="button" onclick="adicionarElemento(this)" data-toggle="modal" class="btn btn-success float-right  ml-3"><i
+                 <button type="button" onclick="adicionarElemento(this)" class="btn btn-success float-right  ml-3"><i
                  title="Adicionar Pedido" class="fa fa-plus"  ></i></button>
 
                 <div class="d-flex">
