arrumando layout painel de controle

--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -127,7 +127,7 @@
         <!--/.col-->
     </div>
 
-    <div class="col-xl-9">
+    <div class="col-xl-9" style="min-height: 500px;">
         <div class="card">
             <div class="card-body" id="divDoPedido">
 
@@ -348,7 +348,7 @@
     window.addEventListener("storage",(function(e){
        location.reload(true)
     }).bind(this));
-   
+
 </script>
 <script src="/scripts/socket.js"></script>
 <script src="/js/editar.js"></script>
