--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -148,7 +148,7 @@
                         <button type="button"  onclick="imprimir(this)" class="btn btn-primary float-right bg-flat-color-1 ml-3"><i
                                 title="Imprimir" class="fa fa-print" ></i></button>
 
-                       <button type="button" onclick="editar('{{this.orderRequest}}')" class="btn btn-secondary float-right  ml-3"><i
+                       <button type="button"  class="btn btn-secondary float-right  ml-3"><i
                                 title="Editar" class="fa fa-edit" ></i></button>
 
                         <button type="button"
