--- a/src/views/partials/_sidebar.hbs
+++ b/src/views/partials/_sidebar.hbs
@@ -36,10 +36,11 @@
                         aria-expanded="false"> <i class="menu-icon fa fa-desktop"></i>Visualizar Configurações</a>
                     <ul class="sub-menu children dropdown-menu">
                         <li><i class="fa fa-table"></i><a href="/menu/views">Visualizar Menu</a></li>
+                        <li><i class="fa fa-table"></i><a href="/pedidos">Vizualizar Pedidos</a></li>
                         <li><i class="fa fa-table"></i><a href="/clients/1">Visualizar Clientes</a></li>
                         <li><i class="fa fa-table"></i><a href="/delivery">Visualizar Bairros</a></li>
 
-                    </ul>
+                    </ul>]
                 </li>
                 <h3 class="menu-title">CONFIGURAÇÕES</h3><!-- /.menu-title -->
                 <li class="menu-item-has-children dropdown ">
