--- a/src/views/partials/_modalEditRequest.hbs
+++ b/src/views/partials/_modalEditRequest.hbs
@@ -95,7 +95,7 @@
 
             </div>
             <div class="modal-footer">
-                <label for=""><b> Total: R$25,00</b></label>
+                <label for=""><b> Total: R$</b></label>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Sair</button>
                 <button type="button" class="btn btn-primary">Salvar Edição</button>
             </div>
